// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.calculator";
option java_outer_classname = "CalculatorProto";
option objc_class_prefix = "CLC";

package calculator;

service Calculator {
  rpc Add (AddRequest) returns (AddReply) {}
  rpc Subtract (SubtractRequest) returns (SubtractReply) {}
  rpc Multiply (MultiplyRequest) returns (MultiplyReply) {}
  rpc Divide (DivideRequest) returns (DivideReply) {}
}

message AddRequest {
  int64 n1 = 1;
  int64 n2 = 2;
}

message AddReply {
  string message = 1;
}

message SubtractRequest {
  int64 n1 = 1;
  int64 n2 = 2;
}

message SubtractReply {
  string message = 1;
}

message MultiplyRequest {
  int64 n1 = 1;
  int64 n2 = 2;
}

message MultiplyReply {
  string message = 1;
}


message DivideRequest {
  int64 n1 = 1;
  int64 n2 = 2;
}

message DivideReply {
  string message = 1;
}
